--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,11 @@
   <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/colors/pink.css" id="color-opt" />
 
+  <!-- Add these links to the <head> of your HTML file -->
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script> -->
+
+
 </head>
 <body>
   <app-root></app-root>
